--- a/week1/deleteButton/index.html
+++ b/week1/deleteButton/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <span>Enter item: </span>
+    <h1>Shopping List</h1>
+    <span><b>Enter item: </b></span>
     <input id="my-input"   type="text">
     <button onclick="addItem()">Add Item</button>
     
